# fara

./: .gitignore  COMPUTER_USE.md  README.md  pyproject.toml  test_fara_agent.py
src/fara/: computer_use_agent.py  fara_agent.py  run_fara.py
src/fara/desktop/: __init__.py  desktop_controller.py
webeval/: COMPUTER_USE.md
webeval/scripts/: run_computer_use.py
webeval/scripts/analyze_eval_results/: analysis.ipynb
webeval/src/webeval/systems/: __init__.py  computer_use.py  websurfer.py
